--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
     }
     
     th {
-      background-color: #f2f2f2;
+        background-color: #f2f2f2;
+        text-align: center;
+        vertical-align: middle;
     }
     
     .logo {
@@ -44,21 +46,25 @@
     <img src="logo.png" alt="Company Logo" class="logo">
     <h1>Client Name Here</h1>
     <div class="table-responsive">
-      <table id="project-data" class="table table-striped table-bordered table-hover">
-        <thead>
-          <tr>
-            <th>Project Name</th>
-            <th>Project Manager</th>
-            <th>Project Milestone</th>
-            <th>Schedule</th>
-            <th>Next Submittal Date</th>
-            <th>Budget</th>
-            <th>Budget Spent</th>
-            <th>Amount Invoiced</th>
-            <th>Outstanding Invoice</th>
-            <th>Notes</th>
-          </tr>
-        </thead>
+        <table id="project-data" class="table table-striped table-bordered table-hover">
+            <thead>
+              <tr>
+                <th>Project Name</th>
+                <th>Project Manager</th>
+                <th>Project Milestone</th>
+                <th>Schedule</th>
+                <th>Next Submittal Date</th>
+                <th>Budget</th>
+                <th>Budget Spent</th>
+                <th>Amount Invoiced</th>
+                <th>Outstanding Invoice</th>
+                <th>Notes</th>
+              </tr>
+            </thead>
+            <tbody>
+              <!-- Data will be populated here -->
+            </tbody>
+          </table>
 
   <script>
     // Replace with your API_KEY
