--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <body>
   <div class="container">
     <img src="logo.png" alt="Company Logo" class="logo">
-    <h1>Client Name Here</h1>
+    <h1>Provident Realty Advisors, Inc</h1>
     <div id="password-wrapper">
       <label for="password-input">Enter Password:</label>
       <input type="password" id="password-input">
