--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   gtag('config', 'G-S2Z3XPZWQP');
 </script>
   <title>Example Client Project Status Update</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -39,7 +40,7 @@
     }
 
     th, td {
-      padding: 10px;
+      padding: 5px;
       text-align: left;
       font-size: 14px;
     }
@@ -75,9 +76,10 @@
       font-weight: bold;
     }
 
-    @media (max-width: 768px) {
+    @media (max-width: 576px) {
       .container {
         margin-top: 40px;
+        padding: 10px;
       }
       h1 {
         font-size: 20px;
@@ -85,23 +87,49 @@
       }
       th, td {
         font-size: 12px;
-        padding: 5px;
+        padding: 3px;
+      }
+      .password-input-label {
+        display: none;
+      }
+      .password-input-wrapper {
+        position: relative;
+      }
+      .toggle-password-btn {
+        position: absolute;
+        top: 50%;
+        right: 10px;
+        transform: translateY(-50%);
+        background-color: transparent;
+        border: none;
+        outline: none;
+      }
+      .toggle-password-btn img {
+        max-height: 20px;
       }
     }
   </style>
 </head>
 <body>
-    <div class="container">
+  <div class="container">
+    <div class="row">
+      <div class="col-12 text-center">
         <img src="logo.png" alt="Company Logo" class="logo">
         <h1>Provident Realty Advisors, Inc</h1>
-        <div id="password-wrapper">
-          <label for="password-input">Enter Password:</label>
-          <input type="password" id="password-input">
-          <button onclick="checkPassword()">Submit</button>
-          <p id="password-error" style="color: red; display: none;">Incorrect password. Please try again.</p>
-        </div>
-        <div id="project-data-wrapper" style="display: none;">
-        <div class="table-responsive">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12 password-input-wrapper">
+        <label for="password-input" class="password-input-label">Enter Password:</label>
+        <input type="password" id="password-input">
+        <button onclick="checkPassword()" class="toggle-password-btn">
+          <img src="toggle.png" alt="Toggle Password Visibility">
+        </button>
+        <p id="password-error" style="color: red; display: none;">Incorrect password. Please try again.</p>
+      </div>
+    </div>
+    <div class="row" id="project-data-wrapper" style="display: none;">
+        <div class="col-12 table-responsive">
         <table id="project-data" class="table table-striped table-bordered table-hover">
             <thead>
               <tr>
@@ -120,7 +148,10 @@
             <tbody>
               <!-- Data will be populated here -->
             </tbody>
-          </table>
+        </table>
+      </div>
+    </div>
+  </div>
 
   <script>
     // Replace with your API_KEY
